--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Reddit Sentiment Analysis</title>
+  <title>Reddit Sentiment Explorer</title>
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
   <link href="https://api.fontshare.com/v2/css?f[]=neco@400&f[]=pally@500&display=swap" rel="stylesheet">
@@ -9,9 +9,9 @@
 </head>
 <body>
   <div class="container">
-    <h1>Reddit Sentiment Analysis</h1> 
+    <h1>Reddit Sentiment Explorer</h1> 
     <div class="search-bar"> 
-      <input type="text" id="productName" placeholder="Enter product name">
+      <input type="text" id="productName" placeholder="Enter Topic Name">
       <button onclick="generateImage()"><i class="fas fa-search"></i></button>
     </div>
     <div class="loader" id="loader"></div>
